# archiver

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  archiver-hephaestus.code-workspace  archiver.code-workspace  revive.toml
cmake/: FindMySQL.cmake
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: App.go  Archive.go  CMakeLists.txt  Configuration.go  Database.go  Directory.go  File.go  app.cpp  archive.cpp  archive.h  archive_manager.cpp  archive_manager.h  archive_operation.hpp  archived_directory.cpp  archived_directory.hpp  archived_file.hpp  archived_file_revision.hpp  archiver.cpp  archiver.h  archiver.hpp  archiver.tpp  commandline_options.cpp  commandline_options.hpp  common.cpp  common.h  compressor.cpp  compressor.hpp  compressor.tpp  dearchiver.cpp  dearchiver.hpp  dearchiver.tpp  directory.cpp  directory.h  directory_manager.cpp  directory_manager.h  file.cpp  file.h  file_manager.cpp  file_manager.h  raw_file.cpp  (+8 more)
src/app/util/: clone_char_ptr_array.hpp  get_file_read_buffer.hpp  string_helpers.hpp
src/config/: CMakeLists.txt  config.cpp  config.h  default_config.json  settings.json  version.h.in
src/database/: CMakeLists.txt  archive_database.hpp  archived_database.hpp  archived_directory_database.hpp  archived_file_database.hpp  database.cpp  database.h  database.hpp  directory_database.hpp  file_database.hpp  make.sql  staged_database.hpp  staged_directory_database.hpp  staged_file_database.hpp
src/database/default_implementation/: .gitignore  CMakeLists.txt  archived_database.cpp  archived_database.hpp  archiver_database.sql  database.hpp  staged_database.cpp  staged_database.hpp
src/database/mysql_implementation/: CMakeLists.txt  archived_database.cpp  archived_database.hpp  archiver_database.sql  database.cpp  database.hpp  staged_database.cpp  staged_database.hpp
test/: CMakeLists.txt  additional_generators.cpp  additional_generators.hpp  additional_matchers.cpp  additional_matchers.hpp  archived_database.cpp  archiver.cpp  database.cpp  database_connector.hpp  database_helpers.hpp  database_no_connection.cpp  dearchiver.cpp  helper_concepts.hpp  helper_functions.hpp  helper_macros.hpp  mysql_database.cpp  raw_file.cpp  staged_database.cpp  stager.cpp  test1.cpp  test_common.hpp  test_config_template.json  test_constant_template.hpp
test/config/: CMakeLists.txt  config_template.cpp  test_config_incomplete1.json  test_config_incomplete2.json  test_config_incorrect_type.json  test_config_template.json
test/database/: CMakeLists.txt  archived_database.cpp  database_helpers.hpp  staged_database.cpp
test/database/mock_implementation/: CMakeLists.txt  archived_database.cpp  archived_database.hpp  staged_database.cpp  staged_database.hpp
test/util/: CMakeLists.txt  get_file_read_buffer.cpp
test/util/string_helpers/: remove_prefix.cpp  remove_suffix.cpp
util/: generate_test_file.py
